stores content trim

--- a/content/guide/stores/나비 책갈피/21_책갈피1 (1)r.md
+++ b/content/guide/stores/나비 책갈피/21_책갈피1 (1)r.md
@@ -24,6 +24,7 @@ tags:
 ---
 **책갈피 세트/Bookmark/しおり**
 
-[크기]／
-나비모양 - 3.7cm x 2.3cm (가로x세로)／
+\
+[크기]\
+나비모양 - 3.7cm x 2.3cm (가로x세로)\
 원테두리 나비모양 - 2.2cm X 1.8cm (가로x세로)
