--- a/content/guide/stores/내가 만드는 소녀상(나무)/1.md
+++ b/content/guide/stores/내가 만드는 소녀상(나무)/1.md
@@ -18,16 +18,18 @@ components:
 tags:
 -
 ---
-[구성] ／
-조립키트／
-투명케이스 1개／
-설명서1장／
+[구성]\
+조립키트\
+투명케이스 1개\
+설명서1장\
 
-[크기]／
-소녀상  4cm(가로)X1.2cm(세로)X11cm(높이)／
-의  자  3.5cm(가로)X3.5cm(세로)X5.5cm(높이)／
-바닥판  10cm(가로)X10cm(세로)X0.3cm(두께)／
+\
+[크기]\
+소녀상  4cm(가로)X1.2cm(세로)X11cm(높이)\
+의  자  3.5cm(가로)X3.5cm(세로)X5.5cm(높이)\
+바닥판  10cm(가로)X10cm(세로)X0.3cm(두께)\
 케이스  11cm(가로)X11cm(세로)X17cm(높이)
 
-[소재] ／
+\
+[소재]\
 나무(MDF E0등급)
