--- a/content/guide/stores/함께 평화 열쇠고리/IMGP7211.md
+++ b/content/guide/stores/함께 평화 열쇠고리/IMGP7211.md
@@ -21,13 +21,15 @@ components:
 tags:
 -
 ---
-| 옵션 | 
-제품 1. 큐빅형 열쇠고리
+| 옵션 |\
+제품 1. 큐빅형 열쇠고리\
 제품 2. 긴 열쇠고리
 
-| 크기 |
+\
+| 크기 |\
 나비: 5cm(가로) x 4cm(세로)\
-열쇠고리 - 3cm(가로, 세로)\
+열쇠고리 - 3cm(가로, 세로)
 
+\
 큐빅형 열쇠고리: 6.5cm(세로), 9.5cm(총 길이)\
 긴 열쇠고리 - 7cm(세로), 10cm(총 길이)
