--- a/content/guide/stores/판화 노트/photo_2019-10-04_16-32-12.md
+++ b/content/guide/stores/판화 노트/photo_2019-10-04_16-32-12.md
@@ -21,9 +21,11 @@ tags:
 ---
 **노트/Note/ノート**
 
-[크기]
-표지: 14.4cm(가로)X20.8cm(세로)
-내지: 14cm(가로)X20.7cm(세로) 
+\
+[크기]\
+표지: 14.4cm(가로)X20.8cm(세로)\
+내지: 14cm(가로)X20.7cm(세로)\
 
-[상세정보]
+\
+[상세정보]\
 44p
