--- a/content/connect/notice/모집-2022년-상반기-자원활동가-모집-안내.md
+++ b/content/connect/notice/모집-2022년-상반기-자원활동가-모집-안내.md
@@ -1,5 +1,5 @@
 ---
-title: "[모집] 2022년 상반기 자원활동가 모집 안내"
+title: "[모집 마감] 2022년 상반기 자원활동가 모집 안내"
 author: 관리자
 date: 2021-12-30T05:03:13.893Z
 image: /img/제목을-입력해주세요_-001-복사본.png
