Update 주요 전시 “2”

--- a/content/exhibition/previous/2.md
+++ b/content/exhibition/previous/2.md
@@ -1,8 +1,10 @@
 ---
-title: 전시이름 2
+title: 전시이름-02
+author: 관리자
 date: 2021-12-21T15:06:41.018Z
-summary: 과거전시 설명부분입니다.과거전시 설명부분입니다.과거전시 설명부분입니다.과거전시 설명부분입니다.과거전시 설명부분입니다.과거전시 설명부분입니다.과거전시 설명부분입니다.
-image: https://wwm3.s3.ap-northeast-2.amazonaws.com/exhibition/ex-01/s0-item1.png
+summary: 과거전시 설명부분입니다.과거전시 설명부분입니다.과거전시 설명부분입니다.과거전시 설명부분입니다.과거전시 설명부분입니다.과거전시
+  설명부분입니다.과거전시 설명부분입니다.
+image: /img/이달의기록_수요시위-사진.jpg
 home_sticky: false
 pinned: false
 ---
