Update 주요 전시 “1”

--- a/content/exhibition/previous/1.md
+++ b/content/exhibition/previous/1.md
@@ -7,9 +7,9 @@ image: /img/201709_1300차-수요시위-기념-수요일-12시.jpg
 home_sticky: false
 pinned: false
 ---
-> ### 일본군성노예제문제해결을 위한 정기수요시위 1300차 맞이 특별전
+> #### 일본군성노예제문제해결을 위한 정기수요시위 1300차 맞이 특별전
 >
-> # 수요일, 12
+> ## 수요일, 12시
 
 * 주최: 전쟁과여성인권박물관, 한겨레신문사
 * 일시: 2017.9.12. - 10.21.
