Update 주요 전시 “2”

--- a/content/exhibition/previous/2.md
+++ b/content/exhibition/previous/2.md
@@ -1,11 +1,16 @@
 ---
-title: 전시이름-02
-author: 관리자
+title: 상하이, 위안소의 시작
+author: 전쟁과여성인권박물관
 date: 2021-12-21T15:06:41.018Z
-summary: 과거전시 설명부분입니다.과거전시 설명부분입니다.과거전시 설명부분입니다.과거전시 설명부분입니다.과거전시 설명부분입니다.과거전시
-  설명부분입니다.과거전시 설명부분입니다.
+summary: 2018년 10월 특별전시｜진중일지를 통해 본 상하이 위안소
 image: /img/이달의기록_수요시위-사진.jpg
 home_sticky: false
 pinned: false
 ---
-과거전시 설명부분입니다.과거전시 설명부분입니다.과거전시 설명부분입니다.과거전시 설명부분입니다.과거전시 설명부분입니다.과거전시 설명부분입니다.과거전시 설명부분입니다.
+> #### 진중일지를 통해 본 상하이 위안소
+>
+> ## 상하이, 위안소의 시
+
+* 주최 및 주관 ｜(사)한국정신대문제대책협의회, 전쟁과여성인권박물관
+* 후원｜여성가족
+* 일시｜ 2018.10.02 - 11.03.
