Update 주요 전시 “2”

--- a/content/exhibition/previous/2.md
+++ b/content/exhibition/previous/2.md
@@ -9,8 +9,8 @@ pinned: false
 ---
 > #### 진중일지를 통해 본 상하이 위안소
 >
-> ## 상하이, 위안소의 시
+> ## 상하이, 위안소의 시작
 
 * 주최 및 주관 ｜(사)한국정신대문제대책협의회, 전쟁과여성인권박물관
-* 후원｜여성가족
+* 후원｜여성가족부족
 * 일시｜ 2018.10.02 - 11.03.
