Update 주요 전시 “1”

--- a/content/exhibition/previous/1.md
+++ b/content/exhibition/previous/1.md
@@ -11,5 +11,5 @@ pinned: false
 >
 > ## 수요일, 12시
 
-* 주최: 전쟁과여성인권박물관, 한겨레신문사
-* 일시: 2017.9.12. - 10.21.
+* 주최｜전쟁과여성인권박물관, 한겨레신문사
+* 일시｜2017.9.12. - 10.21.
