--- a/content/learning-and-research/programs/4.md
+++ b/content/learning-and-research/programs/4.md
@@ -18,7 +18,7 @@ program_materials: files/intro.pdf
 always: true
 pinned: false
 ---
-> ####  평화비 건립 10주년 기념 국제심포지엄
+####  평화비 건립 10주년 기념 국제심포지엄
 
 * **일시｜** 2021.12.10.(금)
 * **장소｜** 온라인 Zoom 진행
