--- a/content/learning-and-research/programs/4.md
+++ b/content/learning-and-research/programs/4.md
@@ -14,7 +14,7 @@ home_sticky: true
 apply_link: https://stage.womenandwarmuseum.net/connect/notice/1/
 program_member: "-"
 image: /img/프로그램_국제심포지엄.jpg
-program_materials: files/intro.pdf
+program_materials: https://bit.ly/3oIDPkI
 always: true
 pinned: false
 ---
