--- a/content/learning-and-research/programs/4.md
+++ b/content/learning-and-research/programs/4.md
@@ -1,9 +1,7 @@
 ---
 title: 평화비 건립 10주년 기념 국제심포지엄
 author: 전쟁과여성인권박물관
-summary: 그날의 목소리에서는 일본군성노예제 피해자로 숨죽여 살아왔던 김학순의 시간, 용기 있는 첫 발걸음이 나오기까지 국내외 사회적
-  배경, 공개증언 이후 당당한 여성인권운동가로 우뚝 선 김학순의 활동을 살펴보실 수 있습니다. 더불어 그가 일으킨 파장과 공명의 효과, 함께
-  또는 뒤따라 걸었던 수많은 피해생존자와 평화를 염원하는 전 세계 시민들의 자취를 확인하는 시간이 될 것입니다.
+summary: ""
 date: 2021-12-10T11:36:03.000Z
 application_end_date: "-"
 contact_type: "-"
