--- a/content/learning-and-research/programs/4.md
+++ b/content/learning-and-research/programs/4.md
@@ -6,13 +6,13 @@ date: 2021-12-10T11:36:03.000Z
 application_end_date: "-"
 contact_type: "-"
 program_target: "-"
-program_time: "-"
-program_contact: 02-392-5252
-home_sticky: true
-apply_link: https://stage.womenandwarmuseum.net/connect/notice/1/
 program_member: "-"
+program_contact: 02-392-5252
+program_time: "-"
+apply_link: https://stage.womenandwarmuseum.net/connect/notice/1/
 image: /img/프로그램_국제심포지엄.jpg
 program_materials: https://bit.ly/3oIDPkI
+home_sticky: true
 always: true
 pinned: false
 ---
@@ -22,5 +22,4 @@ pinned: false
 * **장소｜** 온라인 Zoom 진행
 * **언어｜** 한영일 동시통역, 자료집 제공
 * **공동 주최｜** 일본군성노예제 문제해결을 위한 정의기억연대, 민주화운동기념사업회, 일본 Fight for Justice
-
-> **자료집 및 영상｜[https://womenandwar.net/kr/12-10-평화비-건립-10주년-기념-국제심포지엄/](https://womenandwar.net/kr/12-10-%ED%8F%89%ED%99%94%EB%B9%84-%EA%B1%B4%EB%A6%BD-10%EC%A3%BC%EB%85%84-%EA%B8%B0%EB%85%90-%EA%B5%AD%EC%A0%9C%EC%8B%AC%ED%8F%AC%EC%A7%80%EC%97%84/)**
+* **자료집 및 영상｜[https://womenandwar.net/kr/12-10-평화비-건립-10주년-기념-국제심포지엄/](https://womenandwar.net/kr/12-10-%ED%8F%89%ED%99%94%EB%B9%84-%EA%B1%B4%EB%A6%BD-10%EC%A3%BC%EB%85%84-%EA%B8%B0%EB%85%90-%EA%B5%AD%EC%A0%9C%EC%8B%AC%ED%8F%AC%EC%A7%80%EC%97%84/)**
