--- a/content/learning-and-research/programs/4.md
+++ b/content/learning-and-research/programs/4.md
@@ -9,10 +9,10 @@ program_target: "-"
 program_member: "-"
 program_contact: 02-392-5252
 program_time: "-"
+home_sticky: true
 apply_link: https://stage.womenandwarmuseum.net/connect/notice/1/
 image: /img/프로그램_국제심포지엄.jpg
-program_materials: https://bit.ly/3oIDPkI
-home_sticky: true
+program_materials: ""
 always: true
 pinned: false
 ---
