Update 연구자료(영문) “1”

--- a/content/learning-and-research/papers/en/1.md
+++ b/content/learning-and-research/papers/en/1.md
@@ -3,8 +3,8 @@ title: 연구 자료
 author: 교육팀
 date: 2021-08-23T20:36:03+09:00
 summary: ""
-image: /images/@content-01.png
-paper_materials: files/intro.pdf
+image: ""
+paper_materials: ""
 ---
 
 
