상설전시3 연계된 items 정보를 수정합니다.

--- a/content/items/ex-03/상설관/상설관1 오른편/2-3.DR Kongo-2_Cornelia Suhan-medica mondiale.md
+++ b/content/items/ex-03/상설관/상설관1 오른편/2-3.DR Kongo-2_Cornelia Suhan-medica mondiale.md
@@ -2,7 +2,7 @@
 reference_code:
 media_type:
 title: 20살에 이미 4명의 아이를 낳은 F는 어머니, 할머니 그리고 9살의 어린 여동생까지 강간을 당했다. 
-summary:
+summary: ©Cornelia Suhan/medica mondiale
 image:
 description:
 modified_at:
@@ -12,5 +12,3 @@ components:
 tags:
 -
 ---
-
-2-3.DR Kongo-2_Cornelia Suhan-medica mondiale
