--- a/content/items/ex-03/상설관/상설관1 오른편/2-4.442508.md
+++ b/content/items/ex-03/상설관/상설관1 오른편/2-4.442508.md
@@ -1,8 +1,8 @@
 ---
 reference_code:
 media_type:
-title: 2-4.442508
-summary:
+title: 아프가니스탄 난민 캠프의 여성
+summary: ©UN PHOTO/Eric Kanalstein
 image:
 description:
 modified_at:
