--- a/content/items/ex-03/상설관/상설관1 오른편/2-9.160026.md
+++ b/content/items/ex-03/상설관/상설관1 오른편/2-9.160026.md
@@ -1,8 +1,8 @@
 ---
 reference_code:
 media_type:
-title: 2-9.160026
-summary:
+title: 병원에서 치료를 받고 있는 콩고의 성폭력 피해 여성들
+summary: ©UN PHOTO/Marie Frechon
 image:
 description:
 modified_at:
