박물관 정원 아이템 edit

--- a/content/items/뜰/LHS_1652.md
+++ b/content/items/뜰/LHS_1652.md
@@ -1,8 +1,8 @@
 ---
 reference_code:
 media_type:
-title: LHS_1652
-summary:
+title: 김복동 길원옥은 평화다
+summary: 2017년 3월 8일 세계여성의날을 맞이하여 평화비 작가 김운성, 김서경이 헌정한 작품이다.
 image:
 description:
 modified_at:
