--- a/content/learning-and-research/programs/5.md
+++ b/content/learning-and-research/programs/5.md
@@ -1,7 +1,8 @@
 ---
 title: 제9차 8.14세계일본군’위안부’기림일 나비문화제
 author: 전쟁과여성인권박물관
-summary: ""
+summary: 김학순이 세상을 깨우다! 이제 우리가 세상을 바꾼다! 2021 제9차 나비문화제에서는 김학순 공개증언 30주년을 기념하는 행사가
+  마련되어 있습니다.
 date: 2021-08-14T11:36:03.000Z
 application_end_date: ""
 contact_type: ""
@@ -9,8 +10,7 @@ program_target: 일본군성노예제 문제 해결에 관심있는 누구나
 program_member: 제한 없음(온라인 진행)
 program_contact: 02-365-4016
 program_time: 14:00 ~ 16:00
-apply_link: 김학순이 세상을 깨우다! 이제 우리가 세상을 바꾼다! 2021 제9차 나비문화제에서는 김학순 공개증언 30주년을 기념하는
-  행사가 마련되어 있습니다.
+apply_link: ""
 image: /img/웹포스터-210809_나비문화제-포스터_이한철.png
 program_materials: https://youtu.be/PgVdpoIihuE
 home_sticky: false
