Update 교육자료 “미래세대로의-계승-일본군-성노예제-문제는-어떻게-교육되고-있는가”

--- a/content/learning-and-research/resources/미래세대로의-계승-일본군-성노예제-문제는-어떻게-교육되고-있는가.md
+++ b/content/learning-and-research/resources/미래세대로의-계승-일본군-성노예제-문제는-어떻게-교육되고-있는가.md
@@ -1,5 +1,5 @@
 ---
-title: "[워크숍] 미래세대로의 계승, 일본군 성노예제 문제는 어떻게 교육되고 있는가.pdf"
+title: "[PDF] 미래세대로의 계승, 일본군 성노예제 문제는 어떻게 교육되고 있는가"
 author: 전쟁과여성인권박물관
 date: 2021-08-23T11:36:00.000Z
 resource_materials: /img/190617-international-teachers-workshop-교사워크샵-자료집-최종.pdf
