--- a/content/learning-and-research/resources/1.md
+++ b/content/learning-and-research/resources/1.md
@@ -1,5 +1,5 @@
 ---
-title: "[온라인 교육] 일본군성노예제 문제 해결 온라인 교육 가이드.pdf"
+title: "[PDF] 일본군성노예제 문제 해결 온라인 교육 가이드"
 author: 전쟁과여성인권박물관
 date: 2021-08-23T20:36:03+09:00
 summary: ""
