--- a/content/learning-and-research/programs/4.md
+++ b/content/learning-and-research/programs/4.md
@@ -12,7 +12,7 @@ program_time: "-"
 apply_link: ""
 image: /img/프로그램_국제심포지엄.jpg
 program_materials: ""
-home_sticky: true
+home_sticky: false
 always: true
 pinned: false
 ---
