--- a/content/learning-and-research/programs/4.md
+++ b/content/learning-and-research/programs/4.md
@@ -13,7 +13,7 @@ apply_link: ""
 image: /img/프로그램_국제심포지엄.jpg
 program_materials: ""
 home_sticky: false
-always: true
+always: false
 pinned: false
 ---
 ####  평화비 건립 10주년 기념 국제심포지엄
