Update 연구자료(영문) “1”

--- a/content/learning-and-research/papers/en/1.md
+++ b/content/learning-and-research/papers/en/1.md
@@ -1,16 +1,24 @@
 ---
-title: 연구 자료
+title: "[영문/ENG] 연구 자료"
 author: 교육팀
 date: 2021-08-23T20:36:03+09:00
 summary: ""
 image: ""
 paper_materials: ""
 ---
-
-
 * [NOTICE](https://docs.google.com/spreadsheets/d/1mFfRsEkUBMXXL9SjVxxJDamgU3XbcRGHcCmZkrKBKA4/edit?pli=1#gid=0)
+
+
 * [International Organizations](https://docs.google.com/spreadsheets/d/1mFfRsEkUBMXXL9SjVxxJDamgU3XbcRGHcCmZkrKBKA4/edit?pli=1#gid=1182594187)
+
+
 * [Books](https://docs.google.com/spreadsheets/d/1mFfRsEkUBMXXL9SjVxxJDamgU3XbcRGHcCmZkrKBKA4/edit?pli=1#gid=689913543)
+
+
 * [Journal Articles](https://docs.google.com/spreadsheets/d/1mFfRsEkUBMXXL9SjVxxJDamgU3XbcRGHcCmZkrKBKA4/edit?pli=1#gid=1619668511)
+
+
 * [Archives](https://docs.google.com/spreadsheets/d/1mFfRsEkUBMXXL9SjVxxJDamgU3XbcRGHcCmZkrKBKA4/edit?pli=1#gid=1089710560)
+
+
 * [Films & Videos](https://docs.google.com/spreadsheets/d/1mFfRsEkUBMXXL9SjVxxJDamgU3XbcRGHcCmZkrKBKA4/edit?pli=1#gid=795264717)
