Update 공지사항 “모집-2022년-상반기-자원활동가-모집-안내”

--- a/content/connect/notice/모집-2022년-상반기-자원활동가-모집-안내.md
+++ b/content/connect/notice/모집-2022년-상반기-자원활동가-모집-안내.md
@@ -3,7 +3,7 @@ title: "[마감] 2022년 상반기 자원활동가 모집 안내"
 author: 관리자
 date: 2021-12-30T05:03:13.893Z
 image: /img/제목을-입력해주세요_-001-복사본.png
-home_sticky: true
+home_sticky: false
 pinned: false
 ---
 ## 전쟁과여성인권박물관 2022년 상반기 자원활동가 모집 안내
