Update 교육자료 “미래세대로의-계승-일본군-성노예제-문제는-어떻게-교육되고-있는가”

--- a/content/learning-and-research/resources/미래세대로의-계승-일본군-성노예제-문제는-어떻게-교육되고-있는가.md
+++ b/content/learning-and-research/resources/미래세대로의-계승-일본군-성노예제-문제는-어떻게-교육되고-있는가.md
@@ -2,6 +2,7 @@
 title: "[PDF] 미래세대로의 계승, 일본군 성노예제 문제는 어떻게 교육되고 있는가"
 author: 전쟁과여성인권박물관
 date: 2021-08-23T11:36:00.000Z
+image: /img/화면-캡처-2022-02-11-133930.png
 resource_materials: /img/190617-international-teachers-workshop-교사워크샵-자료집-최종.pdf
 home_sticky: false
 pinned: false
