Update 연구자료(국문) “국문-업데이트-준비-중”

--- a/content/learning-and-research/papers/ko/국문-업데이트-준비-중.md
+++ b/content/learning-and-research/papers/ko/국문-업데이트-준비-중.md
@@ -1,7 +1,8 @@
 ---
 title: "[국문] 업데이트 준비 중"
-author: 교육팀
+author: 연구팀
 date: 2022-01-28T09:15:08.438Z
+image: /img/001.png
 home_sticky: false
 ---
 국문 연구자료 업데이트 준비 중입니다
