--- a/content/learning-and-research/papers/jp/일문-日本語-업데이트-준비-중.md
+++ b/content/learning-and-research/papers/jp/일문-日本語-업데이트-준비-중.md
@@ -1,9 +1,9 @@
 ---
 title: "[일문/日本語] 업데이트 준비 중"
-author: 교육팀
+author: 연구팀
 date: 2022-02-03T05:22:27.296Z
 summary: ""
-image: ""
+image: /img/003.png
 paper_materials: ""
 ---
 일문 연구자료 업데이트 준비 중입니다
