Update 연구자료(영문) “1”

--- a/content/learning-and-research/papers/en/1.md
+++ b/content/learning-and-research/papers/en/1.md
@@ -1,9 +1,9 @@
 ---
 title: "[영문/ENG] 연구자료"
-author: 교육팀
+author: 연구팀
 date: 2021-08-23T20:36:03+09:00
 summary: ""
-image: ""
+image: /img/002.png
 paper_materials: ""
 ---
 **NOTICE**
