Update 프로그램 “나비기금-10주년-기념-라운드테이블-“나비기금-10년-세계-전시성폭력-피해자의-희망으로-다시-한-번-날다-””

--- a/content/learning-and-research/programs/나비기금-10주년-기념-라운드테이블-“나비기금-10년-세계-전시성폭력-피해자의-희망으로-다시-한-번-날다-”.md
+++ b/content/learning-and-research/programs/나비기금-10주년-기념-라운드테이블-“나비기금-10년-세계-전시성폭력-피해자의-희망으로-다시-한-번-날다-”.md
@@ -12,7 +12,7 @@ program_member: 제한 없음
 program_contact: info@womenandwar.net
 apply_link: https://bit.ly/ButterflyFund10
 image: /img/웹자보20220304-나비기금-10주년-라운드테이블-웹자보-001-1-724x1024-1-.jpg
-home_sticky: true
+home_sticky: false
 always: false
 pinned: false
 invisible: false
