--- a/content/connect/notice/전쟁과여성인권박물관-자원활동가-모집-대면-비대면.md
+++ b/content/connect/notice/전쟁과여성인권박물관-자원활동가-모집-대면-비대면.md
@@ -9,26 +9,34 @@ pinned: true
 
 * 모집일자: 2022년 3월 10일(목)~3월 16일(수)
 
+
+
+
+
+
+
 # **비대면(긴급)**
 
 1. 활동기간
 
-* 2022년 3월
+\- 2022년 3월
 
 2. 활동내용
 
-* 수요시위 아카이브 내용 검수 및 업데이트(총 2,477건)
-  구글 스프레드시트에서 기술내용 수정 및 추가, 기입력된 메타데이터 및 사진 오류 검수
+\- 수요시위 아카이브 내용 검수 및 업데이트(총 2,477건)
+구글 스프레드시트에서 기술내용 수정 및 추가, 기입력된 메타데이터 및 사진 오류 검수
 
 3. 활동인증
 
-* 1365 자원봉사포털 실적 등록 및 확인서 발급
+\- 1365 자원봉사포털 실적 등록 및 확인서 발급
 
 4. 지원방법
 
-* [구글폼 작성](https://forms.gle/CfC8yZFcNybHKVuG6)
+\- [구글폼 작성](https://forms.gle/CfC8yZFcNybHKVuG6)
 
 5. 문의: 전쟁과여성인권박물관 02-392-5252
+
+
 
 
 
@@ -36,27 +44,32 @@ pinned: true
 
 1. 활동기간
 
-* 2022년 3월~6월 30일(목)
-* 매주 화\~토요일 중 선택
-  		오전 팀: 10:00\~13:00(3시간)
-  		오후 팀: 14:00\~18:00(4시간)
-  		전일: 10:00\~18:00(7시간)
-  		*전일 활동가 식대 제공
+\- 2022년 3월~6월 30일(목)
+
+\- 매주 화\~토요일 중 선택
+	오전 팀: 10:00\~13:00(3시간)
+	오후 팀: 14:00\~18:00(4시간)
+	전일: 10:00\~18:00(7시간)
+	*전일 활동가 식대 제공
 
 2. 사전 교육(1회 필참)
+
 3. 활동내용
 
-* 기록물 목록화(정리, 기술) / 아시아연대회의 및 2000년 여성국제전범법정 기록물, 기증기록물
-* 문서, 사진 스캐닝
-* 영상음성류 편집 및 타임라인 작성
-* 도서간행물류 정리
+\- 기록물 목록화(정리, 기술) / 아시아연대회의 및 2000년 여성국제전범법정 기록물, 기증기록물
+
+\- 문서, 사진 스캐닝
+
+\- 영상음성류 편집 및 타임라인 작성
+
+\- 도서간행물류 정리
 
 4. 활동인증
 
-* 1365 자원봉사포털 실적 등록 및 확인서 발급
+\- 1365 자원봉사포털 실적 등록 및 확인서 발급
 
 5. 지원방법
 
-* 전쟁과여성인권박물관 홈페이지 내 [자원활동 신청서](https://womenandwarmuseum.net/connect/volunteer/) 작성
+\- 전쟁과여성인권박물관 홈페이지 내 [자원활동 신청서](https://womenandwarmuseum.net/connect/volunteer/) 작성
 
-7. 문의: 전쟁과여성인권박물관 02-392-5252
+6. 문의: 전쟁과여성인권박물관 02-392-5252
