Update 공지사항 “전쟁과여성인권박물관-자원활동가-모집-대면-비대면”

--- a/content/connect/notice/전쟁과여성인권박물관-자원활동가-모집-대면-비대면.md
+++ b/content/connect/notice/전쟁과여성인권박물관-자원활동가-모집-대면-비대면.md
@@ -9,12 +9,6 @@ pinned: true
 
 * 모집일자: 2022년 3월 10일(목)~3월 16일(수)
 
-
-
-
-
-
-
 # **비대면(긴급)**
 
 1.활동기간
@@ -32,15 +26,9 @@ pinned: true
 
 4.지원방법
 
-\- 구글폼 작성 ([링크](https://forms.gle/CfC8yZFcNybHKVuG6))
+\- 구글폼 작성 ([링크 클릭](https://forms.gle/CfC8yZFcNybHKVuG6))
 
 5.문의: 전쟁과여성인권박물관 02-392-5252
-
-
-
-
-
-
 
 # **대면**
 
@@ -72,6 +60,6 @@ pinned: true
 
 5.지원방법
 
-\- 전쟁과여성인권박물관 홈페이지 내 자원활동 신청서 작성 ([링크](https://womenandwarmuseum.net/connect/volunteer/))
+\- 전쟁과여성인권박물관 홈페이지 내 자원활동 신청서 작성 ([링크 클릭)](https://womenandwarmuseum.net/connect/volunteer/)
 
 6.문의: 전쟁과여성인권박물관 02-392-5252
