--- a/content/connect/notice/3.md
+++ b/content/connect/notice/3.md
@@ -3,7 +3,7 @@ title: 홈페이지 개편 및 안정화 기간(~22.02.28)
 author: 관리자
 date: 2021-08-23T20:36:03+09:00
 summary: ""
-home_sticky: true
+home_sticky: false
 pinned: true
 ---
 현재 홈페이지 개편 후 후속 페이지의 오픈 및 콘텐츠를 정비하고 있습니다. 
