Update 공지사항 “전쟁과여성인권박물관-자원활동가-모집-대면-비대면”

--- a/content/connect/notice/전쟁과여성인권박물관-자원활동가-모집-대면-비대면.md
+++ b/content/connect/notice/전쟁과여성인권박물관-자원활동가-모집-대면-비대면.md
@@ -1,5 +1,5 @@
 ---
-title: 전쟁과여성인권박물관 자원활동가 모집(대면/비대면)
+title: "[모집]전쟁과여성인권박물관 자원활동가 모집(대면/비대면)"
 author: 관리자
 date: 2022-03-10T02:41:45.003Z
 home_sticky: true
