--- a/content/items/(3)2층/수요집회/LHS_0181.md
+++ b/content/items/(3)2층/수요집회/LHS_0181.md
@@ -1,10 +1,10 @@
 ---
 reference_code:
-media_type: 박물
+media_type:
 title: 수요시위 관련 기록물
-summary: 
+summary: 좌측 상단부터 1990년대에 사용한 헝겊 피켓, 조끼, 나비피켓, 확성기와 마이크, 2011년 1000차 수요시위에서 사용한 손 피켓, 해외에서 전달한 응원 메시지 모음, 수요시위 조끼, 1차 수요시위 개최를 알리는 한국정신대문제대책협의회의 공문, 교통질서유지 조건 통보서이다.
 image:
-description: 좌측 상단부터 1990년대에 사용한 헝겊 피켓, 조끼, 나비피켓, 확성기와 마이크, 2011년 1000차 수요시위에서 사용한 손 피켓, 해외에서 전달한 응원 메시지 모음, 수요시위 조끼, 1차 수요시위 개최를 알리는 한국정신대문제대책협의회의 공문, 교통질서유지 조건 통보서이다.
+description: 
 modified_at:
 created_at:
 components:
