Update 24_우리여성네트워크가 김학순에게 쓴 추도문.md

--- a/content/items/ex-04/section-02/24_우리여성네트워크가 김학순에게 쓴 추도문.md
+++ b/content/items/ex-04/section-02/24_우리여성네트워크가 김학순에게 쓴 추도문.md
@@ -2,7 +2,7 @@
 reference_code:
 media_type:
 title: 우리여성네트워크가 김학순에게 쓴 추도문
-summary:
+summary: 종군위안부문제 우리여성네트워크 일동, 1997-12-18
 image:
 description:
 modified_at:
