Update 22_창우신문 1994년 10월호.md

--- a/content/items/ex-04/section-02/22_창우신문 1994년 10월호.md
+++ b/content/items/ex-04/section-02/22_창우신문 1994년 10월호.md
@@ -1,8 +1,8 @@
 ---
 reference_code:
 media_type:
-title: 창우신문 1994년 10월호
-summary:
+title: 窓友新聞 1994년 10월호
+summary: 窓友会本部, 1994-10-20, 1994년 9월 29일부터 30일까지 일본군'위안부' 피해자 김학순과 황금주, 강순애, 가네다 기미코 등이 일본 국회 앞에서 전후보상을 촉구하며 33시간 동안 단식투쟁을 벌였다. 구리하라 께이꼬가 이를 취재하여 1면에 실었다.  
 image:
 description:
 modified_at:
