Update 21_구리하라 께이꼬가 김학순에게 쓴 편지.md

--- a/content/items/ex-04/section-02/21_구리하라 께이꼬가 김학순에게 쓴 편지.md
+++ b/content/items/ex-04/section-02/21_구리하라 께이꼬가 김학순에게 쓴 편지.md
@@ -2,7 +2,7 @@
 reference_code:
 media_type:
 title: 구리하라 께이꼬가 김학순에게 쓴 편지
-summary: 1994-10-25
+summary: 1994-10-25, 일본 오사카 窓友新聞(1987~2000)의 기자 구리하라 께이꼬가 1994년 9월 일본 국회 앞 단식투쟁을 취재하고나서 김학순에게 쓴 편지다.
 image:
 description:
 modified_at:
