Update 23_2000년 일본군성노예전범 여성국제법정 보고서.md

--- a/content/items/ex-04/section-01-right/23_2000년 일본군성노예전범 여성국제법정 보고서.md
+++ b/content/items/ex-04/section-01-right/23_2000년 일본군성노예전범 여성국제법정 보고서.md
@@ -2,7 +2,7 @@
 reference_code:
 media_type:
 title: 2000년 일본군성노예전범 여성국제법정 보고서
-summary: "'제5차 아시아연대회의에서 '2000년 일본군성노예전범 여성국제법정 개최' 결정"
+summary: 한국정신대문제대책협의회, 2001-12-26 
 image:
 description:
 modified_at:
