Update 4_김학순 공개증언 현장.md

--- a/content/items/ex-04/section-02/4_김학순 공개증언 현장.md
+++ b/content/items/ex-04/section-02/4_김학순 공개증언 현장.md
@@ -1,8 +1,8 @@
 ---
 reference_code:
 media_type:
-title: 김학순 공개증언 현장
-summary:
+title: 김학순의 공개증언 현장
+summary: 1991-08-14
 image:
 description:
 modified_at:
