Update 5_신고전화 개통식에서 김학순.md

--- a/content/items/ex-04/section-02/5_신고전화 개통식에서 김학순.md
+++ b/content/items/ex-04/section-02/5_신고전화 개통식에서 김학순.md
@@ -1,8 +1,8 @@
 ---
 reference_code:
 media_type:
-title: 신고전화 개통식에서 김학순
-summary:
+title: 정신대 신고전화 개통식에 참석한 김학순
+summary: 1991-09-19
 image:
 description:
 modified_at:
