Update 7_일본 오사카. 일본 최초의 증언집회 사진(1).md

--- a/content/items/ex-04/section-02/7_일본 오사카. 일본 최초의 증언집회 사진(1).md
+++ b/content/items/ex-04/section-02/7_일본 오사카. 일본 최초의 증언집회 사진(1).md
@@ -1,8 +1,8 @@
 ---
 reference_code:
 media_type:
-title: 일본 오사카. 일본 최초의 증언집회 사진(1)
-summary:
+title: 일본 오사카에서 열린 김학순의 증언집회
+summary: 1991-12-06, 김학순은 1991년 12월 6일 일본을 방문하여 도쿄지방재판소에 '아시아태평양전쟁 한국인 희생자 보상청구소송'을 제소하고, 오사카를 시작으로 고베, 도쿄, 사카이, 나라, 효고 등에서 증언집회에 참석했다. (김혜원 기증)
 image:
 description:
 modified_at:
