--- a/content/items/ex-04/section-02/23_.md
+++ b/content/items/ex-04/section-02/23_.md
@@ -1,8 +1,8 @@
 ---
 reference_code:
 media_type:
-title: '일본국회 앞 전후보상 촉구 단식투쟁에 참여함'
-summary: 1996.10.18사진
+title: 일본군'위안부' 문제의 올바른 해결을 위한 시민연대 발대식에서 발언하는 김학순
+summary: 1996-10-18
 image:
 description: 
 modified_at:
