Update 20_일본국회 앞 전후보상 촉구 단식투쟁.md

--- a/content/items/ex-04/section-02/20_일본국회 앞 전후보상 촉구 단식투쟁.md
+++ b/content/items/ex-04/section-02/20_일본국회 앞 전후보상 촉구 단식투쟁.md
@@ -1,8 +1,8 @@
 ---
 reference_code:
 media_type:
-title: 일본국회 앞 전후보상 촉구 단식투쟁
-summary:
+title: 일본 국회 앞 전후보상 촉구 단식투쟁에 참여한 김학순과 황금주
+summary: 1994-09-29
 image:
 description:
 modified_at:
