--- a/content/items/ex-04/section-02/17_전후보상 6.6집회에서 발언하는 김학순.md
+++ b/content/items/ex-04/section-02/17_전후보상 6.6집회에서 발언하는 김학순.md
@@ -1,8 +1,8 @@
 ---
 reference_code:
 media_type:
-title: 전후보상 6.6집회에서 발언하는 김학순
-summary:
+title: 일본 전후보상 6·6총궐기집회에서 발언하는 김학순
+summary: 1994-06-06
 image:
 description:
 modified_at:
