Update 15_테오 반 보벤과의 간담회.md

--- a/content/items/ex-04/section-02/15_테오 반 보벤과의 간담회.md
+++ b/content/items/ex-04/section-02/15_테오 반 보벤과의 간담회.md
@@ -1,8 +1,8 @@
 ---
 reference_code:
 media_type:
-title: 테오 반 보벤과의 간담회
-summary:
+title: UN 인권소위원회 특별보고관 테오 반 보벤과의 간담회
+summary: 한국정신대문제대책협의회, 1992-12-11, 한국교회여성연합회에서 열린 <종군위안부와의 간담회>에 이영숙, 이효재, 테오 반 보벤, 강덕경, 황금주, 이용수, 강정숙, 정진성, 김학순, 윤영애, 윤정옥 등이 참석했다. 
 image:
 description:
 modified_at:
