Update 14_일본의 전후 보상에 관한 국제 공청회.md

--- a/content/items/ex-04/section-02/14_일본의 전후 보상에 관한 국제 공청회.md
+++ b/content/items/ex-04/section-02/14_일본의 전후 보상에 관한 국제 공청회.md
@@ -1,8 +1,8 @@
 ---
 reference_code:
 media_type:
-title: 일본의 전후 보상에 관한 국제 공청회
-summary:
+title: 일본의 전후 보상에 관한 국제공청회
+summary: 1992-12-09, 일본 도쿄에서 열린 <일본의 전후 보상에 관한 국제공청회>에서 북한의 일본군'위안부' 피해자 김영실의 증언이 끝나자 강순애와 김학순 등이 단상에 올라 함께 울었다. 
 image:
 description:
 modified_at:
