Update 12_1992년 경로제에서 김학순.md

--- a/content/items/ex-04/section-02/12_1992년 경로제에서 김학순.md
+++ b/content/items/ex-04/section-02/12_1992년 경로제에서 김학순.md
@@ -1,8 +1,8 @@
 ---
 reference_code:
 media_type:
-title: 1992년 경로제에서 김학순
-summary:
+title: 경로제에서 춤추는 김학순
+summary: 1992-05-01, 이날 경로제에서 일본군'위안부' 피해자들의 모임인 무궁화자매회가 결성되고 김학순이 총무를 맡았다. 
 image:
 description:
 modified_at:
