Update 13-2_제1차 아시아연대회의 보고서.md

--- a/content/items/ex-04/section-02/13-2_제1차 아시아연대회의 보고서.md
+++ b/content/items/ex-04/section-02/13-2_제1차 아시아연대회의 보고서.md
@@ -2,7 +2,7 @@
 reference_code:
 media_type:
 title: 제1차 아시아연대회의 보고서
-summary:
+summary: 한국정신대문제대책협의회, 1999-06-04(재판)
 image:
 description:
 modified_at:
