Update 17_전후보상 6.6집회에서 발언하는 김학순.md

--- a/content/items/ex-04/section-02/17_전후보상 6.6집회에서 발언하는 김학순.md
+++ b/content/items/ex-04/section-02/17_전후보상 6.6집회에서 발언하는 김학순.md
@@ -1,7 +1,7 @@
 ---
 reference_code:
 media_type:
-title: 일본 전후보상 6.6집회에서 발언하는 김학순
+title: 일본 전후보상 6·6총궐기집회에서 발언하는 김학순
 summary: 1994-06-06
 image:
 description:
