Update 11_올해의 여성상 수상하는 김학순.md

--- a/content/items/ex-04/section-02/11_올해의 여성상 수상하는 김학순.md
+++ b/content/items/ex-04/section-02/11_올해의 여성상 수상하는 김학순.md
@@ -1,8 +1,8 @@
 ---
 reference_code:
 media_type:
-title: 올해의 여성상 수상하는 김학순
-summary:
+title: 제8회 한국여성대회에 참석한 김학순
+summary: 1992-03-08, 한국여성단체연합 주최 제8회 한국여성대회에서 김학순이 올해의 여성상을 수상했다. 
 image:
 description:
 modified_at:
