Update 10_일본의 전후책임을 생각하는 효고 모임.md

--- a/content/items/ex-04/section-02/10_일본의 전후책임을 생각하는 효고 모임.md
+++ b/content/items/ex-04/section-02/10_일본의 전후책임을 생각하는 효고 모임.md
@@ -1,8 +1,8 @@
 ---
 reference_code:
 media_type:
-title: 일본의 전후책임을 생각하는 효고 모임
-summary:
+title: 일본의 전후책임을 생각하는 효고 모임에서 발언하는 김학순
+summary: 1991-12-15
 image:
 description:
 modified_at:
