--- a/content/items/ex-04/section-01-right/9_기자회견 현장.md
+++ b/content/items/ex-04/section-01-right/9_기자회견 현장.md
@@ -2,7 +2,7 @@
 reference_code:
 media_type:
 title: 기자회견 현장
-summary: "정신대연구회, 37개 여성단체와 함께 기자회견 개최하고 한일 정부에 공개서한 송부 "
+summary: 1990-10-17, 37개 여성단체와 정신대연구회는 한국교회여성연합회 회의실에서 기자회견을 열고 한일 정부에 일본군의 강제연행을 인정하라는 취지의 공개서한을 송부했다.
 image:
 description:
 modified_at:
