--- a/content/items/ex-04/section-01-right/8_노태우 대통령 방일 맞이 기자회견.md
+++ b/content/items/ex-04/section-01-right/8_노태우 대통령 방일 맞이 기자회견.md
@@ -2,7 +2,7 @@
 reference_code:
 media_type:
 title: 노태우 대통령 방일 맞이 기자회견
-summary: "한교여연·여연·여대생대표자협의회, 노태우 대통령 방일 맞이 기자회견 개최, 일본 정부에 사죄 요구 성명서 발표"
+summary: 1990-05-18, 한국교회여성연합회와 여대생대표자협의회, 한국여성단체연합은 노태우 대통령 방일 맞이 기자회견을 개최하고 일본 정부에 사죄를 요구하는 성명서를 발표했다. 
 image:
 description:
 modified_at:
