Update 메인 슬라이드 “기록분야-자원활동가-모집”

--- a/content/slides/기록분야-자원활동가-모집.md
+++ b/content/slides/기록분야-자원활동가-모집.md
@@ -1,6 +1,6 @@
 ---
 weight: "1"
-upper_message: 대면/비대면
+upper_message: 대면
 title: 기록분야 자원활동가 모집
 sub_title: 2022.03.10.(목)~03.16.(수)
 date: 2022-03-10T02:52:56.532Z
