Update 6_일본 히로히또 국왕 사망에 대한 한국교회여성의 입장.md

--- a/content/items/ex-04/section-01-right/6_일본 히로히또 국왕 사망에 대한 한국교회여성의 입장.md
+++ b/content/items/ex-04/section-01-right/6_일본 히로히또 국왕 사망에 대한 한국교회여성의 입장.md
@@ -2,7 +2,7 @@
 reference_code:
 media_type:
 title: 일본 히로히또 국왕 사망에 대한 한국교회여성의 입장
-summary: "한교여연, '정신대' 문제에 대한 사죄를 요구하는 성명서 발표"
+summary: 한국교회여성연합회, 1989-01-23, 한국교회여성연합회가 일본에 '정신대' 문제에 대한 사죄를 요구하며 발표한 성명서
 image:
 description:
 modified_at:
