Update 5_제주도에서 개최된 '여성과 관광문화' 국제 세미나.md

--- a/content/items/ex-04/section-01-right/5_제주도에서 개최된 '여성과 관광문화' 국제 세미나.md
+++ b/content/items/ex-04/section-01-right/5_제주도에서 개최된 '여성과 관광문화' 국제 세미나.md
@@ -1,8 +1,8 @@
 ---
 reference_code:
 media_type:
-title: 제주도에서 개최된 '여성과 관광문화' 국제 세미나
-summary: "윤정옥, 한교여연 주최 '여성과 관광문화' 국제 세미나에서 '정신대' 문제 조사결과 보고"
+title: 여성과 관광문화 국제 세미나
+summary: 1988-04-00, 윤정옥은 한국교회여성연합회에서 주최한 <여성과 관광문화 국제 세미나>에서 '정신대' 문제 조사결과를 발표했다. 
 image:
 description:
 modified_at:
