Update 5-2_여성과 관광문화 자료집.md

--- a/content/items/ex-04/section-01-right/5-2_여성과 관광문화 자료집.md
+++ b/content/items/ex-04/section-01-right/5-2_여성과 관광문화 자료집.md
@@ -1,8 +1,8 @@
 ---
 reference_code:
 media_type:
-title: 여성과 관광문화 자료집
-summary: "윤정옥, 한교여연 주최 '여성과 관광문화' 국제 세미나에서 '정신대' 문제 조사결과 보고"
+title: 여성과 관광문화 국제 세미나 자료집
+summary: 한국교회여성연합회, 1988-04-21, '기생 관광(일본인 성매매 관광)'과 일본군'위안부' 문제를 최초로 제기한 한국교회여성연합회는 1988년 서울올림픽을 앞두고 4월 21일부터 23일까지 제주도에서 <여성과 관광문화 국제 세미나>를 개최했다. 당시 행사에서 윤정옥은 '정신대' 문제 조사결과를 발표했다.  
 image:
 description:
 modified_at:
