Update 4_좌측부터 윤정옥, 김혜원, 김신실.md

--- a/content/items/ex-04/section-01-right/4_좌측부터 윤정옥, 김혜원, 김신실.md
+++ b/content/items/ex-04/section-01-right/4_좌측부터 윤정옥, 김혜원, 김신실.md
@@ -1,8 +1,8 @@
 ---
 reference_code:
 media_type:
-title: 좌측부터 윤정옥, 김혜원, 김신실
-summary: "윤정옥·김혜원·김신실, 후쿠오카, 큐슈, 오키나와, 도카시키 섬, 도쿄, 사이타마, 삿포로 등 방문하여 '정신대' 문제 조사"
+title: 1988년 '정신대' 문제 조사 활동
+summary: 1988-02-00, 윤정옥은 김혜원, 김신실과 함께 일본 후쿠오카, 큐슈, 오키나와, 도카시키 섬, 도쿄, 사이타마, 삿포로 등을 답사하며 '정신대' 문제를 조사 연구했다. 
 image:
 description:
 modified_at:
