Update 2_전두환대통령 일본방문 즈음한 우리의 입장_1.md

--- a/content/items/ex-04/section-01-right/2_전두환대통령 일본방문 즈음한 우리의 입장_1.md
+++ b/content/items/ex-04/section-01-right/2_전두환대통령 일본방문 즈음한 우리의 입장_1.md
@@ -1,8 +1,8 @@
 ---
 reference_code:
 media_type:
-title: 전두환대통령 일본방문 즈음한 우리의 입장
-summary: "한교여연, 전두환 방일 맞이 '정신대' 문제 해결을 위한 서한 발송"
+title: 전두환대통령 일본방문에 즈음한 우리의 입장
+summary: 1984-08-23, 한국교회여성연합회는 전두환 대통령의 방일을 맞이하여 '정신대' 문제 해결을 촉구하는 서한을 발송했다. (윤영애 기증)
 image:
 description:
 modified_at:
