Update 22_96 평화를위한 증언 집회.md

--- a/content/items/ex-04/section-01-right/22_96 평화를위한 증언 집회.md
+++ b/content/items/ex-04/section-01-right/22_96 평화를위한 증언 집회.md
@@ -1,8 +1,8 @@
 ---
 reference_code:
 media_type:
-title: 96 평화를위한 증언 집회
-summary: "정대협, 일본 전역에서 '피해자와 함께하는 국민기금 반대 집회' 개최"
+title: 1996년 평화를 위한 증언집회
+summary: 1996-07-00, 1996년 한국정신대문제대책협의회는 일본 전역에서 <피해자와 함께하는 국민기금 반대 집회>를 열었다. 
 image:
 description:
 modified_at:
