Update 20_국민모금에 의한 위로금에 반대하는 기자회견.md

--- a/content/items/ex-04/section-01-right/20_국민모금에 의한 위로금에 반대하는 기자회견.md
+++ b/content/items/ex-04/section-01-right/20_국민모금에 의한 위로금에 반대하는 기자회견.md
@@ -2,7 +2,7 @@
 reference_code:
 media_type:
 title: 국민모금에 의한 위로금에 반대하는 기자회견
-summary:
+summary: 1994-06-00, 정신대문제대책협의회는 일본의 민간 위로금(償い金)에 반대하는 기자회견과 집회를 개최했다. 
 image:
 description:
 modified_at:
