Update 19_'비엔나 세계인권회의에서 발언하는 김복동.md

--- a/content/items/ex-04/section-01-right/19_'비엔나 세계인권회의에서 발언하는 김복동.md
+++ b/content/items/ex-04/section-01-right/19_'비엔나 세계인권회의에서 발언하는 김복동.md
@@ -1,8 +1,8 @@
 ---
 reference_code:
 media_type:
-title: 비엔나 세계인권회의에서 발언하는 김복동
-summary: "비엔나 세계인권회의에서 발언하는 김복동, 1993.6., 사진"
+title: 1993년 비엔나 세계인권회의에서 발언하는 김복동
+summary: 1993-06-00
 image:
 description:
 modified_at:
