Update 18_UN 인권소위원회에서 증언하는 황금주.md

--- a/content/items/ex-04/section-01-right/18_UN 인권소위원회에서 증언하는 황금주.md
+++ b/content/items/ex-04/section-01-right/18_UN 인권소위원회에서 증언하는 황금주.md
@@ -1,8 +1,8 @@
 ---
 reference_code:
 media_type:
-title: UN 인권소위원회에서 증언하는 황금주
-summary: "정대협, UN 인권소위원회에서 일본군'위안부' 문제 보고"
+title: 1992년 UN 인권소위원회에서 증언하는 황금주
+summary: 1992-01-08, 한국정신대문제대책협의회는 UN 인권소위원회에서 일본군'위안부' 문제를 보고했다. 당시 황금주가 참여하여 피해사실을 증언했다. 
 image:
 description:
 modified_at:
