--- a/content/items/ex-04/section-01-right/17_한국, 필리핀, 타이완, 타이, 홍콩, 일본 6개국이 참가한 제1회 아시아연대회의.md
+++ b/content/items/ex-04/section-01-right/17_한국, 필리핀, 타이완, 타이, 홍콩, 일본 6개국이 참가한 제1회 아시아연대회의.md
@@ -1,8 +1,8 @@
 ---
 reference_code:
 media_type:
-title: 한국, 필리핀, 타이완, 타이, 홍콩, 일본 6개국이 참가한 제1회 아시아연대회의
-summary: "정대협, 제1차 아시아연대회의 개최 1992.8.10~11., 사진"
+title: 1992년 제1회 아시아연대회의
+summary: 1992-08-00, 한국정신대문제대책협의회가 주최한 제1차 아시아연대회의에 한국, 필리핀, 타이완, 타이, 홍콩, 일본 6개국의 단체와 일본군'위안부' 피해자들이 참가했다. 
 image:
 description:
 modified_at:
