--- a/content/items/ex-04/section-01-right/14_국회 청원을 위해 한교여연에서 열린 기자회견.md
+++ b/content/items/ex-04/section-01-right/14_국회 청원을 위해 한교여연에서 열린 기자회견.md
@@ -1,8 +1,8 @@
 ---
 reference_code:
 media_type:
-title: 국회 청원을 위해 한교여연에서 열린 기자회견
-summary: "정대협, 국회에 '정신대문제 해결을 위한 청원서' 제출 "
+title: 1991년 정신대 문제 국회 청원에 즈음한 기자회견
+summary: 1991-07-23, 한국정신대문제대책협의회는 1991년 7월 18일 정신대 문제 해결을 위한 청원서를 한국 국회에 제출하고 23일 이와 관련한 기자회견을 열었다. 
 image:
 description:
 modified_at:
