--- a/content/items/ex-04/section-01-right/13_정신대 문제에 관한 강의.md
+++ b/content/items/ex-04/section-01-right/13_정신대 문제에 관한 강의.md
@@ -1,8 +1,8 @@
 ---
 reference_code:
 media_type:
-title: 정신대 문제에 관한 강의
-summary: "정대협, 서울에서 '정신대 문제에 관한 강연회' 개최"
+title: 1991년 정신대 문제에 관한 강의
+summary: 한국정신대문제대책협의회, 1991-05-28, 한국정신대문제대책협의회는 서울 기독교회관에서 일본군'위안부' 문제에 관한 강연회를 개최했다.
 image:
 description:
 modified_at:
