Update 12_파고다 공원 앞에서 수요시위.md

--- a/content/items/ex-04/section-01-right/12_파고다 공원 앞에서 수요시위.md
+++ b/content/items/ex-04/section-01-right/12_파고다 공원 앞에서 수요시위.md
@@ -1,8 +1,8 @@
 ---
 reference_code:
 media_type:
-title: 파고다 공원 앞에서 수요시위
-summary:
+title: 1991년 가이후 총리 방한 규탄대회
+summary: 한국정신대문제대책협의회, 1991-01-08, 한국정신대문제대책협의회는 가이후 도시키 일본 총리 방한에 반대하는 규탄대회를 열고, 일본군'위안부' 문제에 대한 사실인정과 공식사죄를 촉구하며 파고다공원에서 종로1가까지 행진했다. 
 image:
 description:
 modified_at:
