--- a/content/items/ex-04/section-01-right/10_기독교회관으로 사무실을 이전하고 개최한 현판식.md
+++ b/content/items/ex-04/section-01-right/10_기독교회관으로 사무실을 이전하고 개최한 현판식.md
@@ -2,7 +2,7 @@
 reference_code:
 media_type:
 title: 기독교회관으로 사무실을 이전하고 개최한 현판식
-summary: "37개 여성단체, 한국정신대문제대책협의회(이하 정대협) 결성(회장 윤정옥, 서기 김혜원, 회계 김신실, 실무 윤영애와 방숙자)"
+summary: 한국정신대문제대책협의회, 1992-11-16, 한국정신대문제대책협의회는 아현동 여성사회교육원에서 종로5가 기독교회관으로 사무실을 이전하고 현판식을 가졌다. 공동대표 윤정옥과 이효재가 현판을 달았다.
 image:
 description:
 modified_at:
