--- a/content/items/(3)2층/그림자료/LHS_0247.md
+++ b/content/items/(3)2층/그림자료/LHS_0247.md
@@ -2,7 +2,7 @@
 reference_code:
 media_type:
 title: 빼앗긴 순정
-summary: 강덕경(1995) / 37cmX53cm / 색연필
+summary: 강덕경, 1995년, 37cmX53cm, 색연필
 image:
 description:
 modified_at:
