--- a/content/items/(3)2층/생애관1/자료/LHS_6929.md
+++ b/content/items/(3)2층/생애관1/자료/LHS_6929.md
@@ -1,7 +1,7 @@
 ---
 reference_code:
 media_type:
-title: 쉼터'우리집'미술치료교실에서 만든 그림 동화책
+title: 쉼터 미술치료교실에서 만든 동화책
 summary: 길원옥, 최갑순
 image:
 description:
