--- a/content/items/(3)2층/생애관1/자료/LHS_6965.md
+++ b/content/items/(3)2층/생애관1/자료/LHS_6965.md
@@ -1,7 +1,7 @@
 ---
 reference_code:
 media_type:
-title: 1992년 한국여성단체연합이 수여한 '올해의 여성상'상패
+title: 1992년 제8회 한국여성대회 올해의 여성상 상패
 summary: 김학순
 image:
 description:
