--- a/content/items/(3)2층/생애관1/자료/LHS_7023.md
+++ b/content/items/(3)2층/생애관1/자료/LHS_7023.md
@@ -1,8 +1,8 @@
 ---
 reference_code:
 media_type:
-title: 얀 루프-오헨의 젊은시절 사진과 자서전 <50years of Silence>
-summary: 
+title: 젊은시절 사진과 자서전 <50years of Silence>
+summary: 얀 루프-오헨
 image:
 description:
 modified_at:
