--- a/content/items/(3)2층/역사관/자료/LHS_0231.md
+++ b/content/items/(3)2층/역사관/자료/LHS_0231.md
@@ -2,7 +2,7 @@
 reference_code:
 media_type:
 title: 전쟁 당시 사용한 군표와 화폐
-summary: 위안소마다 정해진 요금규정이 있어 계급별로 이용시간에 차이를 두고, 현지의 화폐나 군표를 통해 지불했다. 그러나 대다수 보수를 받지 못했고, 군표를 모아뒀더라도 종전이 되자 쓸모없어졌다.
+summary: 위안소마다 정해진 요금규정이 있어 계급별로 이용시간에 차이를 두고 현지의 화폐나 군표를 통해 지불했다. 그러나 대다수 보수를 받지 못했고, 군표를 모아뒀더라도 전쟁이 끝나자 쓸모없어졌다.
 image:
 description:
 modified_at:
