--- a/content/items/(3)2층/역사관/자료/LHS_0232.md
+++ b/content/items/(3)2층/역사관/자료/LHS_0232.md
@@ -1,8 +1,8 @@
 ---
 reference_code:
 media_type:
-title: "군인들에게 지급돤 콘돔 '돌격 1번'"
-summary: "위안소에 들어가는 병사들에게는 '돌격 1번'이라는 특별콘돔이 지급되었다. 그리고 각 방에는 세척용 수용액이 비치되어 있었다."
+title: 군인들에게 지급돤 콘돔 <돌격 1번>
+summary: 위안소에 들어가는 병사들에게는 <돌격 1번>이라는 특별콘돔이 지급되었다. 그리고 각 방에는 세척용 수용액이 비치되어 있었다.
 image:
 description:
 modified_at:
