--- a/content/items/ex-02/운동사관/연대로희망을만들다/아시아연대회의 1차_0092.md
+++ b/content/items/ex-02/운동사관/연대로희망을만들다/아시아연대회의 1차_0092.md
@@ -1,8 +1,8 @@
 ---
 reference_code:
 media_type:
-title: 아시아연대회의 1차_0092
-summary:
+title: 제1차 아시아연대회의
+summary: 한국정신대문제대책협의회, 1992-08-10, 제1차 아시아연대회의에서 일본군'위안부' 피해를 증언하는 노청자
 image:
 description:
 modified_at:
