--- a/content/items/ex-02/운동사관/연대로희망을만들다/두 차례의 범국민적 모금활동을 통해 피해자 지원.md
+++ b/content/items/ex-02/운동사관/연대로희망을만들다/두 차례의 범국민적 모금활동을 통해 피해자 지원.md
@@ -1,8 +1,8 @@
 ---
 reference_code:
 media_type:
-title: 두 차례의 범국민적 모금활동을 통해 피해자 지원
-summary: 1993년 7월 26일 백주년기념관 그릴에서 진행한 정신대할머니 생활기금모금 국민운동본부 성금전달식의 사진이다.
+title: 정신대할머니 생활기금모금 국민운동본부 성금전달식
+summary: 1993-07-26
 image:
 description:
 modified_at:
