Update 20070215 미 하원 청문회_1790.md

--- a/content/items/ex-02/운동사관/연대로희망을만들다/20070215 미 하원 청문회_1790.md
+++ b/content/items/ex-02/운동사관/연대로희망을만들다/20070215 미 하원 청문회_1790.md
@@ -1,8 +1,8 @@
 ---
 reference_code:
 media_type:
-title: 미국 하원 청문회
-summary: 미국 하원 청문회 현장을 지켜보는 한국과 호주의 피해자들
+title: 일본군위안부 결의안 관련 미국 하원 청문회
+summary: 한국정신대문제대책협의회, 2007-02-15, 일본군위안부 결의안 H.Res.121 관련 미국 하원 청문회에 김군자, 이용수, 얀 루프 오헨이 참석했다. 해당 결의안은 7월 30일 본회의에서 만장일치로 통과되었다.  
 image:
 description:
 modified_at:
