--- a/content/items/ex-02/운동사관/연대로희망을만들다/2002.5.3~4(2) 남북.md
+++ b/content/items/ex-02/운동사관/연대로희망을만들다/2002.5.3~4(2) 남북.md
@@ -1,8 +1,8 @@
 ---
 reference_code:
 media_type:
-title: 일본의 과거사 청산을 요구하는 평양국제심포지엄에서 피해생존자 사진
-summary: 2002년 5월 3일에서 4일까지 열린 평양국제심포지엄에 참석한 피해생존자들의 사진이다.
+title: <일본의 과거청산을 요구하는 아시아지역토론회>에서 만난 남북한 피해생존자들
+summary: 2002-05-03
 image:
 description:
 modified_at:
