--- a/content/items/ex-02/운동사관/연대로희망을만들다/2000.12.7-12(4) 남북.md
+++ b/content/items/ex-02/운동사관/연대로희망을만들다/2000.12.7-12(4) 남북.md
@@ -2,7 +2,7 @@
 reference_code:
 media_type:
 title: 남북공동기소에 관한 공동 기자회견
-summary: 2000년 12월 남북공동기소에 관한 공동 기자회견 현장이다. 
+summary: 2000-12-11, 2000년 12월 8일부터 12월까지 일본에서 2000년 여성국제전범법정이 개최되었다. 남측과 북측은 남북공동기소에 관한 공동 기자회견을 가졌다. (박영숙 기증)
 image:
 description:
 modified_at:
