Update 21_1995 여성에 대한 NGO 포럼.md

--- a/content/items/ex-04/section-01-right/21_1995 여성에 대한 NGO 포럼.md
+++ b/content/items/ex-04/section-01-right/21_1995 여성에 대한 NGO 포럼.md
@@ -1,7 +1,7 @@
 ---
 reference_code:
 media_type:
-title: 1995년 북경세계여성대회
+title: 1995년 북경세계여성대회(1)
 summary: 1995-09-04, 한국정신대문제대책협의회는 북경세계여성대회에 참가해 일본군'위안부' 문제를 공론화하는 활동을 전개했다. 북경세계여성대회는 여성에 대한 전쟁범죄로서 '성노예제'를 명시하는 행동강령을 채택하며 "책임자를 처벌하고 피해자에 대해 배상해야 한다"는 국제적 합의를 이루어냈다.    
 image:
 description:
