Update 1992.08 일본군'위안부'피해자 황금주, 유엔 인권소위원회에 직접 참석하여 증언.md

--- a/content/items/ex-02/운동사관/연대로희망을만들다/1992.08 일본군'위안부'피해자 황금주, 유엔 인권소위원회에 직접 참석하여 증언.md
+++ b/content/items/ex-02/운동사관/연대로희망을만들다/1992.08 일본군'위안부'피해자 황금주, 유엔 인권소위원회에 직접 참석하여 증언.md
@@ -1,8 +1,8 @@
 ---
 reference_code:
 media_type:
-title: 황금주 증언 사진
-summary: "1992년 8월 일본군'위안부'피해자 황금주, UN 인권소위원회에 직접 참석하여 증언"
+title: 1992년 UN인권소위원회에서 증언하는 황금주
+summary: 1992-08-18, 한국정신대문제대책협의회는 UN인권소위원회에서 일본군'위안부' 문제를 보고했다. 당시 황금주가 참여해 피해사실을 증언했다. 
 image:
 description:
 modified_at:
