unmarshal yml fix

--- a/content/items/ex-04/section-01-right/7_정신대 원혼 서린 발자취 취재기 육필 원고.md
+++ b/content/items/ex-04/section-01-right/7_정신대 원혼 서린 발자취 취재기 육필 원고.md
@@ -1,8 +1,8 @@
 ---
 reference_code:
 media_type:
-title: '정신대' 원혼 서린 발자취 취재기 육필 원고
-summary: 윤정옥, 1990, 윤정옥은 국내외 일본군'위안부' 피해지역을 답사하고 피해자들을 연구 조사한 결과, 1990년 1월 4일부터 한겨레신문을 통해 <'정신대' 원혼 서린 발자취 취재기>를 4차례에 걸쳐 연재했다. (윤정옥 기증)
+title: "'정신대' 원혼 서린 발자취 취재기 육필 원고"
+summary: "윤정옥, 1990, 윤정옥은 국내외 일본군'위안부' 피해지역을 답사하고 피해자들을 연구 조사한 결과, 1990년 1월 4일부터 한겨레신문을 통해 <'정신대' 원혼 서린 발자취 취재기>를 4차례에 걸쳐 연재했다. (윤정옥 기증)"
 image:
 description:
 modified_at:
