Update 공지사항 “전쟁과여성인권박물관-자원활동가-모집-대면-비대면”

--- a/content/connect/notice/전쟁과여성인권박물관-자원활동가-모집-대면-비대면.md
+++ b/content/connect/notice/전쟁과여성인권박물관-자원활동가-모집-대면-비대면.md
@@ -1,9 +1,9 @@
 ---
-title: "[모집]전쟁과여성인권박물관 자원활동가 모집(대면)"
+title: "[마감]전쟁과여성인권박물관 자원활동가 모집(대면/비대면)"
 author: 관리자
 date: 2022-03-10T02:41:45.003Z
-home_sticky: true
-pinned: true
+home_sticky: false
+pinned: false
 ---
 전쟁과여성인권박물관은 현재 수요시위 디지털 아카이브 검수 및 아시아연대회의 기록 컬렉션 구축 작업을 수행하고 있습니다. 박물관 자원활동을 통해 여성·인권과 관련한 다양한 유형의 기록을 다루어 볼 수 있을 거라 생각합니다.코로나 상황으로 인하여 직접 방문하기 어려우신 분들의 경우, 3월 한 달 동안 비대면 자원활동이 가능하니 많은 관심과 지원 부탁드립니다.
 
