운동사관 > 침묵을 깨트리다 3개 아이템 수정

--- a/content/items/ex-02/운동사관/침묵을깨트리다/1988.4.21~23 여성과 관광문화 세미나에서 일본군'위안부'문제가 처음 공식적으로 제기됨.md
+++ b/content/items/ex-02/운동사관/침묵을깨트리다/1988.4.21~23 여성과 관광문화 세미나에서 일본군'위안부'문제가 처음 공식적으로 제기됨.md
@@ -2,7 +2,7 @@
 reference_code:
 media_type:
 title: 1988.4.21~23 여성과 관광문화 세미나에서 일본군'위안부'문제가 처음 공식적으로 제기됨
-summary:
+summary: 제주도에서 개최된 '여성과 관광문화' 국제 세미나, 1988.4.21-23., 사진
 image:
 description:
 modified_at:
