--- a/content/items/ex-02/운동사관/침묵을깨트리다/1990.11.16 37개 여성단체와 개인들이 참여하여 한국정신대문제대책협의회 결성.md
+++ b/content/items/ex-02/운동사관/침묵을깨트리다/1990.11.16 37개 여성단체와 개인들이 참여하여 한국정신대문제대책협의회 결성.md
@@ -2,7 +2,7 @@
 reference_code:
 media_type:
 title: 1990.11.16 37개 여성단체와 개인들이 참여하여 한국정신대문제대책협의회 결성
-summary:
+summary: 기독교회관으로 사무실을 이전하고 개최한 현판식, 1992.11.16., 사진
 image:
 description:
 modified_at:
