Update 1991.9.18 정신대 신고전화 개통.md

--- a/content/items/ex-02/운동사관/침묵을깨트리다/1991.9.18 정신대 신고전화 개통.md
+++ b/content/items/ex-02/운동사관/침묵을깨트리다/1991.9.18 정신대 신고전화 개통.md
@@ -1,10 +1,10 @@
 ---
 reference_code:
 media_type:
-title: 1991.9.18 정신대 신고전화 개통
-summary: 1991.9.18.
+title: 정신대 신고전화 개통식
+summary: 1991-09-18, 한국교회여성연합회 교회와사회위원회 주관으로 정신대 신고전화 개통식을 가졌고 국내에서 최초로 일본군성노예제 피해사실을 공개증언한 김학순이 참석했다.
 image:
-description:
+description: 
 modified_at:
 created_at:
 components:
