Update 1988.4.21~23 여성과 관광문화 세미나에서 일본군'위안부'문제가 처음 공식적으로 제기됨.md

--- a/content/items/ex-02/운동사관/침묵을깨트리다/1988.4.21~23 여성과 관광문화 세미나에서 일본군'위안부'문제가 처음 공식적으로 제기됨.md
+++ b/content/items/ex-02/운동사관/침묵을깨트리다/1988.4.21~23 여성과 관광문화 세미나에서 일본군'위안부'문제가 처음 공식적으로 제기됨.md
@@ -1,8 +1,8 @@
 ---
 reference_code:
 media_type:
-title: 1988.4.21~23 여성과 관광문화 세미나에서 일본군'위안부'문제가 처음 공식적으로 제기됨
-summary: 제주도에서 개최된 '여성과 관광문화' 국제 세미나, 1988.4.21-23., 사진
+title: 여성과 관광문화 국제 세미나
+summary: 1988-04-00, 올림픽 개최를 앞두고 한국교회여성연합회는 1988년 4월 21일부터 23일까지 제주도에서 <여성과 관광문화> 국제 세미나를 열었다. 윤정옥은 그간의 연구조사 결과를 공식적으로 발표했고, 7월 한국교회여성연합회 교회와사회위원회 산하에 정신대문제연구위원회가 설치됐다. 
 image:
 description:
 modified_at:
