Update 1990.11.16 37개 여성단체와 개인들이 참여하여 한국정신대문제대책협의회 결성.md

--- a/content/items/ex-02/운동사관/침묵을깨트리다/1990.11.16 37개 여성단체와 개인들이 참여하여 한국정신대문제대책협의회 결성.md
+++ b/content/items/ex-02/운동사관/침묵을깨트리다/1990.11.16 37개 여성단체와 개인들이 참여하여 한국정신대문제대책협의회 결성.md
@@ -1,8 +1,8 @@
 ---
 reference_code:
 media_type:
-title: 1990.11.16 37개 여성단체와 개인들이 참여하여 한국정신대문제대책협의회 결성
-summary: 기독교회관으로 사무실을 이전하고 개최한 현판식, 1992.11.16., 사진
+title: 한국정신대문제대책협의회 현판식
+summary: 1992-11-16, 한국정신대문제대책협의회는 아현동 여성사회교육원에서 종로 5가의 기독교회관으로 사무실을 이전하고 현판식을 가졌다.당시 공동대표였던 윤정옥과 이효재, 실행위원이었던 김혜원 등이 참석했다. 
 image:
 description:
 modified_at:
