Update 공지사항 “공고-전쟁과여성인권박물관-학예사-채용-~3-25”

--- a/content/connect/notice/공고-전쟁과여성인권박물관-학예사-채용-~3-25.md
+++ b/content/connect/notice/공고-전쟁과여성인권박물관-학예사-채용-~3-25.md
@@ -4,8 +4,8 @@ author: 전쟁과여성인권박물관
 date: 2022-03-11T04:12:52.557Z
 summary: (재)일본군성노예제 문제해결을 위한 정의기억연대(이하 정의연)에서는 다음과 같이 학예사를 모집합니다. 역량 있는 분들의 많은 지원을 바랍니다.
 image: /img/622aa8878d0ae1597915.png
-home_sticky: true
-pinned: true
+home_sticky: false
+pinned: false
 ---
 (재)일본군성노예제 문제해결을 위한 정의기억연대(이하 정의연)에서는 다음과 같이 학예사를 모집합니다. 역량 있는 분들의 많은 지원을 바랍니다.\
 2022.03.11.\
