Update 공지사항 “박물관-임시-휴관-안내-4-2-~4-6”

--- a/content/connect/notice/박물관-임시-휴관-안내-4-2-~4-6.md
+++ b/content/connect/notice/박물관-임시-휴관-안내-4-2-~4-6.md
@@ -2,7 +2,7 @@
 title: 박물관 임시 휴관 안내(4.2.~4.6.)
 author: 관리자
 date: 2022-03-24T04:56:28.620Z
-home_sticky: true
+home_sticky: false
 pinned: false
 ---
 **박물관 임시 휴관 안내**
