Update 공지사항 “전쟁과여성인권박물관-평화의-골목-벽화-그리기-자원활동가-모집”

--- a/content/connect/notice/전쟁과여성인권박물관-평화의-골목-벽화-그리기-자원활동가-모집.md
+++ b/content/connect/notice/전쟁과여성인권박물관-평화의-골목-벽화-그리기-자원활동가-모집.md
@@ -10,8 +10,6 @@ pinned: false
 
 이 벽화는 박물관으로 오시는 길인 평화의 골목에 전쟁이 없는 평화의 염원을 담은 일본군 성노예제와 전시 성폭력 문제 해결을 위한 작품입니다.
 
-
-
 벽화그리기 일정은 다음과 같이 진행되오니 활동 하실 수 있는 날짜와 시간에 맞추어 아래 구글폼에 신청해 주시면 감사하겠습니다.
 
 
@@ -23,6 +21,7 @@ pinned: false
 3. 벽화작업 : 4/24(일), 4/27(수), 4/28(목), 4/30(토), 5/1(월) 중 가능한 날짜 선택
 
 4. 시 간 : 10시\~13시, 14시\~18시, 종일 중 가능한 시간 선택\
+
 5. 장 소 : 전쟁과여성인권박물관 골목
 
 6. 신청연령 : 고등학생부터 신청 가능
@@ -33,10 +32,11 @@ pinned: false
 
 \- 자원활동 확인서 발급.
 
-8. 준비 사항\
-  - 햇볕이 강하고 기온차가 심할 수 있으니 다음 용품들 꼭 준비해 오세요
+8. 준비 사항
 
-\    바람막이 겉옷, 밀짚모자, 썬크림. 개인용 수건 등
+\- 햇볕이 강하고 기온차가 심할 수 있으니 다음 용품들 꼭 준비해 오세요
+
+\    : 바람막이 겉옷, 밀짚모자, 썬크림. 개인용 수건 등
 
 9. 구글 신청 폼
 
