Update 공지사항 “전쟁과여성인권박물관-평화의-골목-벽화-그리기-자원활동가-모집”

--- a/content/connect/notice/전쟁과여성인권박물관-평화의-골목-벽화-그리기-자원활동가-모집.md
+++ b/content/connect/notice/전쟁과여성인권박물관-평화의-골목-벽화-그리기-자원활동가-모집.md
@@ -14,31 +14,31 @@ pinned: false
 
 
 
-1. 모집기간 : 4월15일(금) ~ 22일(금)
+(1) 모집기간 : 4월15일(금) ~ 22일(금)
 
-2. 모집인원 : 1일 5명 이내
+(2) 모집인원 : 1일 5명 이내
 
-3. 벽화작업 : 4/24(일), 4/27(수), 4/28(목), 4/30(토), 5/1(월) 중 가능한 날짜 선택
+(3) 벽화작업 : 4/24(일), 4/27(수), 4/28(목), 4/30(토), 5/1(월) 중 가능한 날짜 선택
 
-4. 시 간 : 10시\~13시, 14시\~18시, 종일 중 가능한 시간 선택\
+(4) 시 간 : 10시\~13시, 14시\~18시, 종일 중 가능한 시간 선택\
 
-5. 장 소 : 전쟁과여성인권박물관 골목
+(5) 장 소 : 전쟁과여성인권박물관 골목
 
-6. 신청연령 : 고등학생부터 신청 가능
+(6) 신청연령 : 고등학생부터 신청 가능
 
-7. 자원봉사 시간인증 :
+(7) 자원봉사 시간인증 :
 
 \- 1365 자원봉사 포털 사이트 봉사활동 인증.
 
 \- 자원활동 확인서 발급.
 
-8. 준비 사항
+(8) 준비 사항
 
 \- 햇볕이 강하고 기온차가 심할 수 있으니 다음 용품들 꼭 준비해 오세요
 
 \    : 바람막이 겉옷, 밀짚모자, 썬크림. 개인용 수건 등
 
-9. 구글 신청 폼
+(9) 구글 신청 폼
 
 https://forms.gle/Uce7PutXNST8Tr2RA
 
