Update 공지사항 “전쟁과여성인권박물관-평화의-골목-벽화-그리기-자원활동가-모집”

--- a/content/connect/notice/전쟁과여성인권박물관-평화의-골목-벽화-그리기-자원활동가-모집.md
+++ b/content/connect/notice/전쟁과여성인권박물관-평화의-골목-벽화-그리기-자원활동가-모집.md
@@ -12,13 +12,11 @@ pinned: false
 
 벽화그리기 일정은 다음과 같이 진행되오니 활동 하실 수 있는 날짜와 시간에 맞추어 아래 구글폼에 신청해 주시면 감사하겠습니다.
 
-
-
 (1) 모집기간 : 4월15일(금) ~ 22일(금)
 
 (2) 모집인원 : 1일 5명 이내
 
-(3) 벽화작업 : 4/24(일), 4/27(수), 4/28(목), 4/30(토), 5/1(월) 중 가능한 날짜 선택
+(3) 벽화작업 : 4/24(일), 4/27(수), 4/28(목), 4/30(토), 5/1() 중 가능한 날짜 선택
 
 (4) 시 간 : 10시\~13시, 14시\~18시, 종일 중 가능한 시간 선택\
 
@@ -41,7 +39,5 @@ pinned: false
 (9) 구글 신청 폼
 
 https://forms.gle/Uce7PutXNST8Tr2RA
-
-
 
 연락처 : 02-392-5252
