Update 프로그램 “차근차근-일본군성노예제-문제-알아보기-온라인-교육”

--- a/content/learning-and-research/programs/차근차근-일본군성노예제-문제-알아보기-온라인-교육.md
+++ b/content/learning-and-research/programs/차근차근-일본군성노예제-문제-알아보기-온라인-교육.md
@@ -10,9 +10,9 @@ program_member: 제한 없음
 program_contact: 02-392-5252
 apply_link: https://womenandwarmuseum.net/learning-and-research/e-learning/
 image: /img/화면-캡처-2022-02-14-115722.png
-home_sticky: true
+home_sticky: false
 always: true
-pinned: true
+pinned: false
 invisible: false
 ---
 코로나로 인해, 사는 곳이 달라서, 또는 여러 이유로 박물관을 오기 어렵지만, 일본군성노예제문제에 대해서 알고싶은 여러분들을 위해서 일본군성노예제 문제 온라인 교육 프로그램을 준비했습니다. 
