--- a/content/connect/notice/전쟁과여성인권박물관-평화의-골목-벽화-그리기-자원활동가-모집.md
+++ b/content/connect/notice/전쟁과여성인권박물관-평화의-골목-벽화-그리기-자원활동가-모집.md
@@ -2,7 +2,7 @@
 title: 평화의 골목-벽화 그리기 자원활동가 모집(4/15~4/22)
 author: 관리자
 date: 2022-04-15T05:03:23.054Z
-image: /img/photo_2022-04-15_13-58-31.jpg
+image: /img/벽화그리기자원봉사.jpg
 home_sticky: true
 pinned: false
 ---
