Update 공지사항 “전쟁과여성인권박물관-평화의-골목-벽화-그리기-자원활동가-모집”

--- a/content/connect/notice/전쟁과여성인권박물관-평화의-골목-벽화-그리기-자원활동가-모집.md
+++ b/content/connect/notice/전쟁과여성인권박물관-평화의-골목-벽화-그리기-자원활동가-모집.md
@@ -16,9 +16,9 @@ pinned: false
 
 (2) 모집인원 : 1일 5명 이내
 
-(3) 벽화작업 : 4/24(일), 4/27(수), 4/28(목), 4/30(토), 5/1() 중 가능한 날짜 선택
+(3) 벽화작업 : 4/24(일), 4/27(수), 4/28(목), 4/30(토), 5/1(일) 중 가능한 날짜 선택
 
-(4) 시 간 : 10시\~13시, 14시\~18시, 종일 중 가능한 시간 선택\
+(4) 시 간 : 10시\~13시, 14시\~18시, 종일 중 가능한 시간 선택
 
 (5) 장 소 : 전쟁과여성인권박물관 골목
 
@@ -34,7 +34,7 @@ pinned: false
 
 \- 햇볕이 강하고 기온차가 심할 수 있으니 다음 용품들 꼭 준비해 오세요
 
-\    : 바람막이 겉옷, 밀짚모자, 썬크림. 개인용 수건 등
+   : 바람막이 겉옷, 밀짚모자, 썬크림. 개인용 수건 등
 
 (9) 구글 신청 폼
 
