Update 프로그램 “전쟁과여성인권박물관-10주년-기념사업”

--- a/content/learning-and-research/programs/전쟁과여성인권박물관-10주년-기념사업.md
+++ b/content/learning-and-research/programs/전쟁과여성인권박물관-10주년-기념사업.md
@@ -9,7 +9,7 @@ program_contact: 02-392-5252
 image: /img/전쟁과여성인권박물관-10주년-포스터_최종.jpg
 home_sticky: true
 always: false
-pinned: false
+pinned: true
 invisible: false
 ---
 
