Update 프로그램 “전쟁과여성인권박물관-10주년-기념사업”

--- a/content/learning-and-research/programs/전쟁과여성인권박물관-10주년-기념사업.md
+++ b/content/learning-and-research/programs/전쟁과여성인권박물관-10주년-기념사업.md
@@ -12,11 +12,9 @@ always: false
 pinned: true
 invisible: false
 ---
-
-
 ####  전쟁과여성인권박물관 10주년 기념
 
-* **<기록, 사람을 잇다> 기념식&라운드테이**
+* **<기록, 사람을 잇다> 기념식&라운드테이블**
 
   * 일시: 2022.05.05.(목) 11:00~14:00
   * 진행
