Update 공지사항 “전쟁과여성인권박물관-10주년-기념사업”

--- a/content/connect/notice/전쟁과여성인권박물관-10주년-기념사업.md
+++ b/content/connect/notice/전쟁과여성인권박물관-10주년-기념사업.md
@@ -4,7 +4,7 @@ author: 전쟁과여성인권박물관
 date: 2022-04-21T05:35:09.748Z
 image: /img/전쟁과여성인권박물관-10주년-포스터_최종.jpg
 home_sticky: true
-pinned: true
+pinned: false
 ---
 ####  전쟁과여성인권박물관 10주년 기념
 
