Update 메인 슬라이드 “기록-사람을-잇다”

--- a/content/slides/기록-사람을-잇다.md
+++ b/content/slides/기록-사람을-잇다.md
@@ -4,7 +4,7 @@ upper_message: 전쟁과여성인권박물관 10주년 기념사업
 title: 기록, 사람을 잇다
 sub_title: 기념식&라운드테이블 | 기념전시&참여마당 | 시민강좌 | 후원자 대상 행사
 date: 2022-04-21T05:41:09.176Z
-image: /img/웹자보-10주년-기념-행사-전체_복사본-1-001.png
+image: /img/홈페이지-박물관-슬라이드-007.png
 button_name: 자세히 보기
 button_url: https://womenandwarmuseum.net/connect/notice/%EC%A0%84%EC%9F%81%EA%B3%BC%EC%97%AC%EC%84%B1%EC%9D%B8%EA%B6%8C%EB%B0%95%EB%AC%BC%EA%B4%80-10%EC%A3%BC%EB%85%84-%EA%B8%B0%EB%85%90%EC%82%AC%EC%97%85/
 ---
