--- a/content/connect/notice/전쟁과여성인권박물관-10주년-기념사업.md
+++ b/content/connect/notice/전쟁과여성인권박물관-10주년-기념사업.md
@@ -1,5 +1,5 @@
 ---
-title: 전쟁과여성인권박물관 10주년 기념사업
+title: 전쟁과여성인권박물관 10주년 기념행사
 author: 전쟁과여성인권박물관
 date: 2022-04-21T05:35:09.748Z
 summary: 기념식&라운드테이블 | 기념전시&참여마당 | 시민강좌 | 후원자 대상 행사
@@ -7,9 +7,7 @@ image: /img/전쟁과여성인권박물관-10주년-포스터_최종.jpg
 home_sticky: true
 pinned: false
 ---
-####  전쟁과여성인권박물관 10주년 기념
-
-
+####  전쟁과여성인권박물관 10주년 기념 행
 
 * **<기록, 사람을 잇다> 기념식&라운드테이블**
 
