--- a/content/slides/기록-사람을-잇다.md
+++ b/content/slides/기록-사람을-잇다.md
@@ -1,6 +1,6 @@
 ---
 weight: "1"
-upper_message: 전쟁과여성인권박물관 10주년 기념사업
+upper_message: 전쟁과여성인권박물관 10주년 기념행사
 title: 기록, 사람을 잇다
 sub_title: 기념식&라운드테이블 | 기념전시&참여마당 | 시민강좌 | 후원자 대상 행사
 date: 2022-04-21T05:41:09.176Z
