Update 공지사항 “전쟁과여성인권박물관-10주년-기념사업”

--- a/content/connect/notice/전쟁과여성인권박물관-10주년-기념사업.md
+++ b/content/connect/notice/전쟁과여성인권박물관-10주년-기념사업.md
@@ -3,7 +3,7 @@ title: 전쟁과여성인권박물관 10주년 기념행사
 author: 전쟁과여성인권박물관
 date: 2022-04-21T05:35:09.748Z
 summary: 기념식&라운드테이블 | 기념전시&참여마당 | 시민강좌 | 후원자 대상 행사
-image: /img/전쟁과여성인권박물관-10주년-포스터_최종.jpg
+image: /img/웹자보-10주년-기념-행사-전체_최종-001.png
 home_sticky: true
 pinned: false
 ---
@@ -34,6 +34,6 @@ pinned: false
 
   \- 정의기억연대 전쟁과여성인권박물관 후원자 동반 1인 관람료 무료
 
-  \- 방문 후원자 굿즈 제공(소진 시까지)
+  \- 방문 후원자 기념 제공(소진 시까지)
 
-**주최｜** 일본군성노예제 문제해결을 위한 정의기억연대 전쟁과여성인권박물
+**주최｜** 일본군성노예제 문제해결을 위한 정의기억연대・전쟁과여성인권박물관
